--- a/src/resources/recipeQuery.properties
+++ b/src/resources/recipeQuery.properties
@@ -2,3 +2,4 @@ classSelectAll = select * from by_class
 situationSelectAll = select * from by_situation
 methodSelectAll = select * from by_method
 ingredientSelectAll = select * from by_ingredient
+recipeSelect = select * from recipe where RECIPE_NO=?
