--- a/src/resources/adminQuery.properties
+++ b/src/resources/adminQuery.properties
@@ -1,3 +1,3 @@
-viewAllMember = select member_no,member_id,rpad(substr(member_pwd,1,2),length(member_pwd),'*') as \"tempPwd"\,member_name,birth_date,phone,gender,email,enroll_date from member; 
+viewAllMember = select * from member
 
 
