--- a/src/ranking/model/dao/rankingQuery.properties
+++ b/src/ranking/model/dao/rankingQuery.properties
@@ -1,6 +1,6 @@
 rankingTodayRecipe = select * from (select recipeMember.*,row_number() over(order by recipe_today_views desc) as rank from (select r.*, m.member_name, m.member_id from recipe r, member m where r.member_no=m.member_no) recipeMember where posted_date like ?) where rank between 1 and 5
-rankingMonthRecipe = select * from (select recipeMember.*,row_number() over(order by recipe_month_views desc) as rank from (select r.*, m.member_name, m.member_id from recipe r, member m where r.member_no=m.member_no) recipeMember where posted_date like '18/06/13') where rank between 1 and 5
-rankingMonthChef = select * from (select recipeMember.*,row_number() over(order by recipe_views desc) as rank from (select r.*, m.member_name, m.member_id from recipe r, member m where r.member_no=m.member_no) recipeMember where posted_date like '18/06/13') where rank between 1 and 5
+rankingMonthRecipe = select * from (select recipeMember.*,row_number() over(order by recipe_month_views desc) as rank from (select r.*, m.member_name, m.member_id from recipe r, member m where r.member_no=m.member_no) recipeMember where posted_date like ?) where rank between 1 and 5
+rankingMonthChef = select * from (select recipeMember.*,row_number() over(order by recipe_views desc) as rank from (select r.*, m.member_name, m.member_id from recipe r, member m where r.member_no=m.member_no) recipeMember where posted_date like ?) where rank between 1 and 5
 
 
 
