--- a/src/resources/recipeQuery.properties
+++ b/src/resources/recipeQuery.properties
@@ -3,3 +3,4 @@ situationSelectAll = select * from by_situation
 methodSelectAll = select * from by_method
 ingredientSelectAll = select * from by_ingredient
 recipeSelect = select * from recipe where RECIPE_NO=?
+processSelect = select * from process where recipe_no=? order by process_order
