--- a/src/resources/adminQuery.properties
+++ b/src/resources/adminQuery.properties
@@ -1,3 +1,3 @@
-viewAllMember = select * from member
+viewAllMember = select member_No, member_id, RPAD(SUBSTR(MEMBER_PWD,1,2),LENGTH(MEMBER_PWD),'*') as \"tempPwd\", member_name, birth_date, phone, gender, email, enroll_date  from member
 
 
