0616_지현 커밋_랭킹

--- a/src/ranking/model/dao/rankingQuery.properties
+++ b/src/ranking/model/dao/rankingQuery.properties
@@ -1,6 +1,6 @@
-rankingTodayRecipe = select * from (select recipeMember.*,row_number() over(order by recipe_today_views desc) as rank from (select r.*, m.member_name, m.member_id from recipe r, member m where r.member_no=m.member_no) recipeMember where posted_date like ?) where rank between 1 and 5
-rankingMonthRecipe = select * from (select recipeMember.*,row_number() over(order by recipe_month_views desc) as rank from (select r.*, m.member_name, m.member_id from recipe r, member m where r.member_no=m.member_no) recipeMember where posted_date like ?) where rank between 1 and 5
-rankingMonthChef = select * from (select recipeMember.*,row_number() over(order by recipe_views desc) as rank from (select r.*, m.member_name, m.member_id from recipe r, member m where r.member_no=m.member_no) recipeMember where posted_date like ?) where rank between 1 and 5
+rankingTodayRecipe = SELECT * FROM (select * from RANKING_TODAYRECIPE FULL JOIN RECIPE ON(RANKING_TODAYRECIPE.RECIPE_NO=RECIPE.RECIPE_NO) where today_date like ? order by ranking asc) where rownum<=5
+rankingMonthRecipe = SELECT * FROM (select * from RANKING_MONTHRECIPE FULL JOIN RECIPE ON(RANKING_MONTHRECIPE.RECIPE_NO=RECIPE.RECIPE_NO) where month_date like ? order by ranking asc) where rownum<=5
+rankingMonthChef = SELECT * FROM (select * from RANKING_MONTHCHEF FULL JOIN RECIPE ON(RANKING_MONTHCHEF.RECIPE_NO=RECIPE.RECIPE_NO) where MONTH_CHEF_DATE like ? order by ranking asc) where rownum<=5
 
 
 
