--- a/src/resources/mainQuery.properties
+++ b/src/resources/mainQuery.properties
@@ -2,5 +2,5 @@
 totalRecipe=select count(*) as totalRecipe from recipe
 selectWeek=select * from (select recipe_no, recipe_title, recipe_pic, recipe_today_views, recipe_month_views from recipe order by recipe_today_views desc) where rownum<=8
 selectMonth=select * from (select recipe_no, recipe_title, recipe_pic, recipe_today_views, recipe_month_views from recipe order by recipe_month_views desc) where rownum <=8
-addView=update recipe set recipe_views=recipe_views+?, recipe_month_views=recipe_month_views+?, recipe_today_views=recipe_today_views+?
+upView=update recipe set recipe_views=recipe_views+1, recipe_month_views=recipe_month_views+1, recipe_today_views=recipe_today_views+1 where recipe_no = ?
 searchRecipe=select * from recipe where ingredient like '%?%' or recipe_title like '%?%'
