0618_지현 커밋_랭킹222

--- a/src/ranking/model/dao/rankingQuery.properties
+++ b/src/ranking/model/dao/rankingQuery.properties
@@ -1,5 +1,5 @@
 rankingTodayRecipe = SELECT * FROM (select * from RANKING_TODAYRECIPE FULL JOIN RECIPE ON(RANKING_TODAYRECIPE.RECIPE_NO=RECIPE.RECIPE_NO) where today_date like ? order by ranking asc) where rownum<=5
 rankingMonthRecipe = SELECT * FROM (select * from RANKING_MONTHRECIPE FULL JOIN RECIPE ON(RANKING_MONTHRECIPE.RECIPE_NO=RECIPE.RECIPE_NO) where month_date like ? order by ranking asc) where rownum<=5
-rankingMonthChef = SELECT * FROM (select RANKING_MONTHCHEF.MEMBER_NO, MEMBER_ID, MEMBER_NAME, RECIPE.RECIPE_NO, RECIPE_TITLE, RECIPE_PIC, POSTED_DATE from RANKING_MONTHCHEF FULL JOIN RECIPE ON(RANKING_MONTHCHEF.RECIPE_NO=RECIPE.RECIPE_NO) FULL JOIN MEMBER ON(RANKING_MONTHCHEF.MEMBER_NO = MEMBER.MEMBER_NO) where MONTH_CHEF_DATE like ? order by ranking asc) where rownum<=5
-
-
+rankingMonthChef = SELECT * FROM (select RANKING_MONTHCHEF.MEMBER_NO, MEMBER_ID, MEMBER_NAME, RECIPE.RECIPE_NO, RECIPE_TITLE, RECIPE_PIC, RECIPE_VIEWS ,POSTED_DATE from RANKING_MONTHCHEF FULL JOIN RECIPE ON(RANKING_MONTHCHEF.RECIPE_NO=RECIPE.RECIPE_NO) FULL JOIN MEMBER ON(RANKING_MONTHCHEF.MEMBER_NO = MEMBER.MEMBER_NO) where MONTH_CHEF_DATE like ? order by ranking asc) where rownum<=5
+monthChefRecipeList = select * from member left join recipe using(member_no) where member_id = ?
+recipeList = select * from member left join recipe using(member_no)
