--- a/src/resources/mainQuery.properties
+++ b/src/resources/mainQuery.properties
@@ -1,6 +1,11 @@
 #mainQuery.properties
 totalRecipe=select count(*) as totalRecipe from recipe
-selectWeek=select * from (select recipe_no, recipe_title, recipe_pic, recipe_today_views, recipe_month_views from recipe order by recipe_today_views desc) where rownum<=8
-selectMonth=select * from (select recipe_no, recipe_title, recipe_pic, recipe_today_views, recipe_month_views from recipe order by recipe_month_views desc) where rownum <=8
-upView=update recipe set recipe_views=recipe_views+1, recipe_month_views=recipe_month_views+1, recipe_today_views=recipe_today_views+1 where recipe_no = ?
+selectWeek=select * from (select recipe_no, recipe_title, recipe_pic, recipe_today_views, recipe_month_views, cook_time, cook_level from recipe order by recipe_today_views desc) where rownum<=8
+selectMonth=select * from (select recipe_no, recipe_title, recipe_pic, recipe_today_views, recipe_month_views, cook_time, cook_level from recipe order by recipe_month_views desc) where rownum <=8
+upView=update recipe set recipe_views=recipe_views+1, recipe_month_views=recipe_month_views+1, recipe_today_views=recipe_today_views+1 where recipe_no=?
 searchRecipe=select * from recipe where ingredient like '%?%' or recipe_title like '%?%'
+
+selectProduct=select product_no, product_quantity, substr(product_name,1,(instr(product_name,'(')-1)) as product_name, product_price, product_1st_pic, enroll_date from product where product_price < 10000
+selectNewProduct=select product_no, product_quantity, substr(product_name,1,(instr(product_name,'(')-1)) as product_name, product_price, product_1st_pic, enroll_date from (select * from product order by enroll_date desc) where rownum <=3
+selectImminentSoldOut=select product_no, product_quantity, substr(product_name,1,(instr(product_name,'(')-1)) as product_name, product_price, product_1st_pic, enroll_date from (select * from product order by product_quantity asc) where rownum <=3
+selectSeasonProduct=select product_no, product_quantity, substr(product_name,1,(instr(product_name,'(')-1)) as product_name, product_price, product_1st_pic, enroll_date from product where season=?
