--- a/src/resources/productQuery.properties
+++ b/src/resources/productQuery.properties
@@ -5,3 +5,4 @@ basketSelect = select bascket_no,product_name,PRODUCT_1ST_PIC,BASCKET_QUANTITY,P
 basketDelete = delete bascket where bascket_no=?
 basketInsert = insert into bascket values(bascket_SEQ.NEXTVAL,?,?,?)
 basketUpdate = update bascket set bascket_quantity=? where bascket_no=?
+buyingInsert = insert into buying values (buying_SEQ.NEXTVAL,(select bascket_quantity from bascket where bascket_no=?),'Y','N',(select member_no from bascket where bascket_no=?),(select product_no from bascket where bascket_no=?),SYSDATE)
