--- a/src/resources/recipeQuery.properties
+++ b/src/resources/recipeQuery.properties
@@ -6,3 +6,4 @@ recipeSelect = select * from recipe where RECIPE_NO=?
 processSelect = select * from process where recipe_no=? order by process_order
 recipeComment = select * from (select comment_tbl.*, row_number() over(order by comment_no desc) as num from comment_tbl where recipe_no=?) c_tbl join member on (c_tbl.member_no=member.member_no) where num between ? and ?
 recipeCommentAll = select count(*) as totalcount from COMMENT_TBL where recipe_no=?
+writeComment = insert into comment_tbl values(comment_tbl_SEQ.NEXTVAL, ?, sysdate, ?, ?)
