--- a/src/resources/noticeQuery.properties
+++ b/src/resources/noticeQuery.properties
@@ -1,2 +1,4 @@
 viewNotice = select * from notice order by notice_no desc
 viewAllNotice = select * from notice where notice_no=?
+previousNotice = select notice_title from notice where notice_no=(select max(notice_no) from notice where notice_no < ?)
+nextNotice = select notice_title from notice where notice_no=(select min(notice_no) from notice where notice_no > ?)
