--- a/src/resources/memberQuery.properties
+++ b/src/resources/memberQuery.properties
@@ -1,5 +1,5 @@
-emailCheck = select email from member where email = ?
-idCheck = select member_id from member where member_id = ?
-pwdCheck = select member_id from member where member_id=? and member_pwd=?
-insertMember = insert into member values(member_SEQ.NEXTVAL, ?, ?, ?,TO_DATE(?, 'YY-MM-DD'), ?, ?, ?, ?, SYSDATE)		   
-login = select member_name, TO_CHAR(birth_date,'YYMMDD'), phone, address, gender, email, TO_CHAR(enroll_date,'YYMMDD') from member where member_id = ? and member_pwd = ?
+emailCheck=select email from member where email=?
+idCheck=select member_id from member where member_id =?
+pwdCheck=select member_id from member where member_id=? and member_pwd=?
+insertMember=insert into member values(member_SEQ.NEXTVAL, ?, ?, ?, TO_DATE(?,'YY-MM-DD'), ?, ?, ?, SYSDATE,?,?,?)   
+login=select member_no, member_name, TO_CHAR(birth_date,'YYMMDD'), phone, email, address, profile, nickname from member where member_id = ? and member_pwd = ?
