--- a/src/resources/productQuery.properties
+++ b/src/resources/productQuery.properties
@@ -1,7 +1,7 @@
 productSelectAll = select * from product
 productSelectOne = select * from product where product_no=?
 productSelectThisMonth = select * from (select * from product order by PRODUCT_NO desc) where rownum<=3
-basketSelect = select bascket_no,product_name,PRODUCT_1ST_PIC,BASCKET_QUANTITY,PRODUCT_PRICE from product join bascket using(PRODUCT_NO) where member_no=?
+basketSelect = select bascket_no,product_no,product_name,PRODUCT_1ST_PIC,BASCKET_QUANTITY,PRODUCT_PRICE from product join bascket using(PRODUCT_NO) where member_no=?
 basketDelete = delete bascket where bascket_no=?
 basketInsert = insert into bascket values(bascket_SEQ.NEXTVAL,?,?,?)
 basketUpdate = update bascket set bascket_quantity=? where bascket_no=?
