--- a/src/resources/mainQuery.properties
+++ b/src/resources/mainQuery.properties
@@ -1,7 +1,7 @@
 #mainQuery.properties
 totalRecipe=select count(*) as totalRecipe from recipe
-selectWeek=select * from (select recipe_no, recipe_title, recipe_pic, recipe_today_views, recipe_month_views, cook_time, cook_level from recipe order by recipe_today_views desc) where rownum<=8
-selectMonth=select * from (select recipe_no, recipe_title, recipe_pic, recipe_today_views, recipe_month_views, cook_time, cook_level from recipe order by recipe_month_views desc) where rownum <=8
+selectWeek=select recipe.recipe_no as recipe_no, recipe.recipe_title as recipe_title, recipe.recipe_pic as recipe_pic, recipe.recipe_today_views as recipe_week, recipe.recipe_month_views as recipe_month, recipe.cook_level as cook_level, recipe.cook_time as cook_time ,member.member_id as member_id FROM recipe INNER JOIN member ON recipe.member_no=member.member_no where rownum<=8 order by recipe_today_views desc
+selectMonth=select recipe.recipe_no as recipe_no, recipe.recipe_title as recipe_title, recipe.recipe_pic as recipe_pic, recipe.recipe_today_views as recipe_week, recipe.recipe_month_views as recipe_month, recipe.cook_level as cook_level, recipe.cook_time as cook_time,member.member_id as member_id FROM recipe INNER JOIN member ON recipe.member_no=member.member_no where rownum<=8 order by recipe_month_views desc
 upView=update recipe set recipe_views=recipe_views+1, recipe_month_views=recipe_month_views+1, recipe_today_views=recipe_today_views+1 where recipe_no=?
 searchRecipe=select * from recipe where ingredient like '%?%' or recipe_title like '%?%'
 
