0620_아름 (로그인연동)

--- a/src/resources/memberQuery.properties
+++ b/src/resources/memberQuery.properties
@@ -3,3 +3,4 @@ idCheck=select member_id from member where member_id =?
 pwdCheck=select member_id from member where member_id=? and member_pwd=?
 insertMember=insert into member values(member_SEQ.NEXTVAL, ?, ?, ?, TO_DATE(?,'YY-MM-DD'), ?, ?, ?, SYSDATE,?,?,?)   
 login=select member_no, member_name, TO_CHAR(birth_date,'YYMMDD'), phone, email, address, profile, nickname from member where member_id = ? and member_pwd = ?
+selectOneMember = select * from member where member_no=?
