--- a/src/resources/insertRecipeQuery.properties
+++ b/src/resources/insertRecipeQuery.properties
@@ -1,1 +1,3 @@
-insertRecipeAll=insert into recipe values(119,?,?,?,?,?,?,?,?,?,0,0,0,?,?,sysdate,?,?,?,?,5)
+insertRecipeAll=insert into recipe values(?,?,?,?,?,?,?,?,?,?,0,0,0,?,?,sysdate,?,?,?,?,5)
+insertRecipeProcess = insert into process values (process_SEQ.NEXTVAL,?,?,?,?,?,?,?,?)
+insertRecipeMaxNum = select max(recipe_no) as MAXRECIPENUM from recipe
