--- a/src/resources/recipeQuery.properties
+++ b/src/resources/recipeQuery.properties
@@ -4,7 +4,8 @@ methodSelectAll = select * from by_method
 ingredientSelectAll = select * from by_ingredient
 recipeSelect = select * from recipe where RECIPE_NO=?
 processSelect = select * from process where recipe_no=? order by process_order
-recipeComment = select * from (select comment_tbl.*, row_number() over(order by comment_no desc) as num from comment_tbl where recipe_no=?) c_tbl join member on (c_tbl.member_no=member.member_no) where num between ? and ?
+recipeComment = select * from (select comment_tbl.*, row_number() over(order by comment_no asc) as num from comment_tbl where recipe_no=?) c_tbl join member on (c_tbl.member_no=member.member_no) where num between ? and ?
 recipeCommentAll = select count(*) as totalcount from COMMENT_TBL where recipe_no=?
 writeComment = insert into comment_tbl values(comment_tbl_SEQ.NEXTVAL, ?, sysdate, ?, ?)
 updateComment = update comment_tbl set comment_contents=? where comment_no=?
+deleteComment = insert into del_comment values((select comment_no from comment_tbl where comment_no=?),(select comment_contents from comment_tbl where comment_no=?),(select COMMENT_ENROLL_DATE from comment_tbl where comment_no=?),sysdate,(select RECIPE_NO from comment_tbl where comment_no=?),(select MEMBER_NO from comment_tbl where comment_no=?))
