--- a/src/resources/memberQuery.properties
+++ b/src/resources/memberQuery.properties
@@ -4,3 +4,4 @@ pwdCheck=select member_id from member where member_id=? and member_pwd=?
 insertMember=insert into member values(member_SEQ.NEXTVAL, ?, ?, ?, TO_DATE(?,'YY-MM-DD'), ?, ?, ?, SYSDATE,?,?,?)   
 login=select member_no, member_name, TO_CHAR(birth_date,'YYMMDD'), phone, email, address, profile, nickname from member where member_id = ? and member_pwd = ?
 selectOneMember = select * from member where member_no=?
+buyProduct=select product_1st_pic, product_name, buying_send_yn from buying b , product p where p.product_no= (select product_no from member join buying using(member_no) where member_no=?)
