--- a/src/resources/memberQuery.properties
+++ b/src/resources/memberQuery.properties
@@ -3,5 +3,5 @@ idCheck=select member_id from member where member_id =?
 pwdCheck=select member_id from member where member_id=? and member_pwd=?
 insertMember=insert into member values(member_SEQ.NEXTVAL, ?, ?, ?, TO_DATE(?,'YY-MM-DD'), ?, ?, ?, SYSDATE,?,?,?)   
 login=select member_no, member_name, TO_CHAR(birth_date,'YYMMDD'), phone, email, address, profile, nickname from member where member_id = ? and member_pwd = ?
-selectOneMember = select * from member where member_no=?
-buyProduct=select product_1st_pic, product_name, buying_send_yn from buying b , product p where p.product_no= (select product_no from member join buying using(member_no) where member_no=?)
+changeInfo=update member set member_pwd=?, phone=?, email=?, address=?, profile=?, nickname=? where member_id=?
+buyProduct=select product_1st_pic, product_name, buying_send_yn from product p inner join buying b on p.product_no = b.product_no where p.product_no in (select product_no from member join buying using(member_no) where member_no=?)
