--- a/src/resources/productQuery.properties
+++ b/src/resources/productQuery.properties
@@ -1,11 +1,15 @@
 productSelectAll = select * from product
 productSelectOne = select * from product where product_no=?
 productSelectThisMonth = select * from (select * from product order by PRODUCT_NO desc) where rownum<=3
-basketSelect = select bascket_no,product_no,product_name,PRODUCT_1ST_PIC,BASCKET_QUANTITY,PRODUCT_PRICE from product join bascket using(PRODUCT_NO) where member_no=?
+productUpdate = update product set product_quantity=(select (select product_quantity from product where product_no=?)-? from dual) where product_no=?
+basketSelect = select bascket_no,product_no,product_name,product_quantity,PRODUCT_1ST_PIC,BASCKET_QUANTITY,PRODUCT_PRICE from product join bascket using(PRODUCT_NO) where member_no=?
 basketDelete = delete bascket where bascket_no=?
+basketDeleteOver = delete from bascket where product_no=? and bascket_quantity>(select product_quantity from product where product_no=?)
 basketInsert = insert into bascket values(bascket_SEQ.NEXTVAL,?,?,?)
 basketUpdate = update bascket set bascket_quantity=? where bascket_no=?
 basketDirectSelect = select bascket_no,product_name,PRODUCT_1ST_PIC,BASCKET_QUANTITY,PRODUCT_PRICE from product join bascket using(PRODUCT_NO) where bascket_no=(select max(bascket_no) from bascket where member_no=?)
-buyingInsert = insert into buying values (buying_SEQ.NEXTVAL,(select bascket_quantity from bascket where bascket_no=?),'Y','N',(select member_no from bascket where bascket_no=?),(select product_no from bascket where bascket_no=?),SYSDATE)
+buyingInsert = insert into buying values (buying_SEQ.NEXTVAL,(select bascket_quantity from bascket where bascket_no=?),'Y','N',(select member_no from bascket where bascket_no=?),(select product_no from bascket where bascket_no=?),SYSDATE,0)
 buyingSelect = select * from buying join product using (product_no) where member_no=? order by buying_no desc
 buyingSelectRecent = select * from (select * from buying join product using (product_no) where member_no=? order by buying_no desc) where rownum<=?
+ordercallInsert = insert into ordercall values(order_no_SEQ.NEXTVAL,?,?,0,?,'','',null)
+ordercallSelect = select * from ordercall;
