--- a/src/resources/productQuery.properties
+++ b/src/resources/productQuery.properties
@@ -8,8 +8,9 @@ basketDeleteOver = delete from bascket where product_no=? and bascket_quantity>(
 basketInsert = insert into bascket values(bascket_SEQ.NEXTVAL,?,?,?)
 basketUpdate = update bascket set bascket_quantity=? where bascket_no=?
 basketDirectSelect = select bascket_no,product_name,PRODUCT_1ST_PIC,BASCKET_QUANTITY,PRODUCT_PRICE from product join bascket using(PRODUCT_NO) where bascket_no=(select max(bascket_no) from bascket where member_no=?)
-buyingInsert = insert into buying values (buying_SEQ.NEXTVAL,(select bascket_quantity from bascket where bascket_no=?),'Y','N',(select member_no from bascket where bascket_no=?),(select product_no from bascket where bascket_no=?),SYSDATE,0)
+buyingInsert = insert into buying values (buying_SEQ.NEXTVAL,(select bascket_quantity from bascket where bascket_no=?),'Y','N',(select member_no from bascket where bascket_no=?),(select product_no from bascket where bascket_no=?),SYSDATE,?)
 buyingSelect = select * from buying join product using (product_no) where member_no=? order by buying_no desc
 buyingSelectRecent = select * from (select * from buying join product using (product_no) where member_no=? order by buying_no desc) where rownum<=?
-ordercallInsert = insert into ordercall values(order_no_SEQ.NEXTVAL,?,?,0,?,'','',null)
-ordercallSelect = select * from ordercall;
+ordercallInsert = insert into ordercall values(order_no_SEQ.NEXTVAL,?,?,0,?,'','',?)
+ordercallSelectRecent = select * from (select * from ordercall where member_no=? order by order_no desc) where rownum=1
+ordercallSelect = select * from ordercall where member_no=?;
