--- a/src/resources/recipeQuery.properties
+++ b/src/resources/recipeQuery.properties
@@ -9,3 +9,4 @@ recipeCommentAll = select count(*) as totalcount from COMMENT_TBL where recipe_n
 writeComment = insert into comment_tbl values(comment_tbl_SEQ.NEXTVAL, ?, sysdate, ?, ?)
 updateComment = update comment_tbl set comment_contents=? where comment_no=?
 deleteComment = insert into del_comment values((select comment_no from comment_tbl where comment_no=?),(select comment_contents from comment_tbl where comment_no=?),(select COMMENT_ENROLL_DATE from comment_tbl where comment_no=?),sysdate,(select RECIPE_NO from comment_tbl where comment_no=?),(select MEMBER_NO from comment_tbl where comment_no=?))
+deleteRecipe = delete recipe where recipe_no=?
