--- a/src/resources/memberQuery.properties
+++ b/src/resources/memberQuery.properties
@@ -6,3 +6,9 @@ login=select member_no, member_name, TO_CHAR(birth_date,'YYMMDD'), phone, email,
 changeInfo=update member set member_pwd=?, phone=?, email=?, address=?, profile=?, nickname=? where member_id=?
 buyProduct=select product_1st_pic, product_name, buying_send_yn from product p inner join buying b on p.product_no = b.product_no where p.product_no in (select product_no from member join buying using(member_no) where member_no=?)
 comments=select comment_no, recipe_title,comment_contents, comment_enroll_date from recipe join (select comment_no, recipe_no, comment_contents, comment_enroll_date from comment_tbl where member_no=?) using(recipe_no)
+selectOneMember=select * from member where member_no=?
+findId=select member_id from member where member_name=? and email=?
+findPwd=select member_no from member where member_id=? and member_name=? and email=?
+temporaryPwd=update member set member_pwd=? where member_no=?
+recipe=select recipe_no, recipe_title, posted_date, recipe_views from recipe where member_no=?
+deleteRecipe=delete from recipe where recipe_no=?
