06-22_지현 상품 리뷰 빼고 커밋

--- a/src/product/model/dao/reviewQuery.properties
+++ b/src/product/model/dao/reviewQuery.properties
@@ -1,2 +1,5 @@
 reviewUpdate = INSERT INTO REVIEW VALUES(REVIEW_SEQ.NEXTVAL,?,SYSDATE,?,?,?)
 reviewAll = SELECT review_no, review_contents, review_enroll_date, review_meet, product_no, member_id, nickname FROM REVIEW left join member using(member_id) WHERE PRODUCT_NO = ? order by review_no desc
+buyCheck = select * from member left join review using(member_id) left join buying on(review.product_no = buying.product_no) where buying.product_no=? and member_id=?
+
+reviewDelete = delete from review where member_id =? and product_no=? and review_no =?
