--- a/src/resources/productQuery.properties
+++ b/src/resources/productQuery.properties
@@ -1,4 +1,4 @@
-productSelectAll = select * from product
+productSelectAll = select * from product order by product_quantity desc
 productSelectOne = select * from product where product_no=?
 productSelectThisMonth = select * from (select * from product order by PRODUCT_NO desc) where rownum<=3
 productUpdate = update product set product_quantity=(select (select product_quantity from product where product_no=?)-? from dual) where product_no=?
