--- a/src/resources/faqQuery.properties
+++ b/src/resources/faqQuery.properties
@@ -1,2 +1,2 @@
-viewFaq = select * from faq
+viewFaq = select * from faq order by faq_no desc
 byCategory = select * from faq where faq_category=? order by faq_no desc
